--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <div class="mensaje">TE QUIERO ❤️</div>
   <div id="mel-container"></div>
 
+  <!-- Botón corazón -->
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="boton-corazon" onclick="tocarSonido()">
+    💖
+  </a>
+
+  <!-- Sonido (opcional) -->
+  <audio id="sonido-lindo" src="https://cdn.pixabay.com/audio/2023/03/07/audio_3b8e9d75fc.mp3"></audio>
+
   <script src="script.js"></script>
 </body>
 </html>
