--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Te Quiero 💖</title>
+  <title>Te Quiero Jazmin💖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
