--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="mel-container"></div>
 
   <!-- Botón corazón -->
-  <a href="https://www.youtube.com/watch?v=KtOnmyKJ6d8" target="_blank" class="boton-corazon" onclick="tocarSonido()">
+  <a href="https://www.youtube.com/watch?v=sDMxQF18yvA" target="_blank" class="boton-corazon" onclick="tocarSonido()">
     💖
   </a>
 
