--- a/index.html
+++ b/index.html
@@ -3,24 +3,114 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>¿Quieres ser mi Puddina?</title>
-  <link rel="stylesheet" href="style.css">
+  <title>TYRONE_PRIME</title>
+  <style>
+    /* Estilos generales para ocupar todo el espacio */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { width: 100%; height: 100%; overflow: hidden; background: black; }
+
+    /* Canvas de Matrix como fondo */
+    #matrix {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: black;
+    }
+
+    /* Contenedor principal centrado */
+    #videoContainer {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      z-index: 1;
+    }
+
+    /* Estilo del elemento video */
+    video {
+      width: 600px;
+      max-width: 80vw;
+      height: auto;
+      display: block;
+      border: 3px solid rgba(0, 255, 70, 0.8);
+      border-radius: 8px;
+      background: rgba(0,0,0,0.5);
+    }
+
+    /* Estilo de la imagen lateral */
+    .side-image {
+      width: 150px;
+      height: auto;
+      border: 3px solid rgba(0, 255, 70, 0.8);
+      border-radius: 8px;
+      background: rgba(0,0,0,0.5);
+    }
+  </style>
 </head>
 <body>
+  <!-- Canvas para el efecto Matrix -->
+  <canvas id="matrix"></canvas>
 
-  <canvas id="matrix-canvas"></canvas>
-
-  <div class="contenido">
-    <h1>¿Quieres ser mi Puddina? 💖</h1>
-
-    <div class="botones">
-      <button class="btn-si" onclick="aceptarPuddina()">Sí ❤️</button>
-      <button class="btn-no" onclick="negarPuddina()">No ❌</button>
-    </div>
-
-    <h2 class="nombre">JAZMÍN 💘</h2>
+  <!-- Contenedor con video e imagen lateral -->
+  <div id="videoContainer">
+    <!-- Cambia 'tu_video.mp4' por la ruta de tu archivo de video -->
+    <video src="tu_video.mp4" controls autoplay loop muted></video>
+    <!-- Cambia 'tu_imagen.jpg' por la ruta de tu imagen pequeña -->
+    <img src="tu_imagen.jpg" alt="Imagen lateral" class="side-image" />
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    // Configuración del canvas
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
+
+    // Redimensionar al tamaño de la ventana
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    // Caracteres del efecto
+    const chars = 'アァカサタナハマヤャラワガザダバパイィキシチニヒミリヰギジヂビピウゥクスツヌフムユュルグズヅブプエェケセテネヘメレヱゲゼデベペオォコソトノホモヨョロゴゾドボポヴン';
+    const fontSize = 16;
+    let columns = Math.floor(canvas.width / fontSize);
+    let drops = Array(columns).fill(1);
+
+    function draw() {
+      // Fondo semitransparente para crear efecto de rastro
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      // Color y fuente
+      ctx.fillStyle = '#0F0';
+      ctx.font = fontSize + 'px monospace';
+
+      // Dibujar caracteres
+      for (let i = 0; i < drops.length; i++) {
+        const text = chars.charAt(Math.floor(Math.random() * chars.length));
+        const x = i * fontSize;
+        const y = drops[i] * fontSize;
+        ctx.fillText(text, x, y);
+
+        // Reiniciar cuando sale de la pantalla
+        if (y > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+
+        drops[i]++;
+      }
+    }
+
+    // Animación continua
+    setInterval(draw, 33);
+  </script>
 </body>
 </html>
