--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
   <!-- Contenedor con video e imagen lateral -->
   <div id="videoContainer">
-    <!-- Cambia 'tu_video.mp4' por la ruta de tu archivo de video -->
-    <video src="tu_video.mp4" controls autoplay loop muted></video>
-    <!-- Cambia 'tu_imagen.jpg' por la ruta de tu imagen pequeña -->
-    <img src="tu_imagen.jpg" alt="Imagen lateral" class="side-image" />
+    <!-- Video configurado con ruta específica -->
+    <video src="./video/SnapTik-dot-Kim-cf2043946c00541a6b23c4bd28b13e0b.mp4" controls autoplay loop muted></video>
+    <!-- Imagen lateral configurada con ruta específica y espacios codificados -->
+    <img src="./video/WhatsApp%20Image%202025-07-24%20at%2011.56.50%20AM.jpeg" alt="Imagen lateral" class="side-image" />
   </div>
 
   <script>
