--- a/index.html
+++ b/index.html
@@ -11,45 +11,33 @@
 
     /* Canvas de Matrix como fondo */
     #matrix {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      background: black;
+      position: fixed; top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: -1; background: black;
     }
 
-    /* Contenedor principal centrado */
+    /* Contenedor principal centrado y flexible */
     #videoContainer {
-      position: absolute;
-      top: 50%;
-      left: 50%;
+      position: absolute; top: 50%; left: 50%;
       transform: translate(-50%, -50%);
-      display: flex;
-      align-items: center;
-      gap: 20px;
+      display: flex; align-items: center; gap: 20px;
       z-index: 1;
     }
 
     /* Estilo del elemento video */
     video {
-      width: 600px;
-      max-width: 80vw;
-      height: auto;
-      display: block;
-      border: 3px solid rgba(0, 255, 70, 0.8);
+      border: 3px solid rgba(0,255,70,0.8);
       border-radius: 8px;
       background: rgba(0,0,0,0.5);
+      width: 600px; max-width: 80vw; height: auto;
     }
 
     /* Estilo de la imagen lateral */
     .side-image {
-      width: 150px;
-      height: auto;
-      border: 3px solid rgba(0, 255, 70, 0.8);
+      border: 3px solid rgba(0,255,70,0.8);
       border-radius: 8px;
       background: rgba(0,0,0,0.5);
+      width: 150px; height: auto;
     }
   </style>
 </head>
@@ -59,10 +47,15 @@
 
   <!-- Contenedor con video e imagen lateral -->
   <div id="videoContainer">
-    <!-- Video configurado con ruta específica -->
-    <video src="./video/SnapTik-dot-Kim-cf2043946c00541a6b23c4bd28b13e0b.mp4" controls autoplay loop muted></video>
-    <!-- Imagen lateral configurada con ruta específica y espacios codificados -->
-    <img src="./video/WhatsApp%20Image%202025-07-24%20at%2011.56.50%20AM.jpeg" alt="Imagen lateral" class="side-image" />
+    <!-- Video con <source> para mayor compatibilidad -->
+    <video controls autoplay loop muted>
+      <source src="./video/SnapTik-dot-Kim-cf2043946c00541a6b23c4bd28b13e0b.mp4" type="video/mp4">
+      Tu navegador no soporta el elemento <code>video</code>.
+    </video>
+
+    <!-- Imagen lateral: si tu nombre de archivo contiene espacios, considera renombrarlo -->
+    <img src="./video/WhatsApp Image 2025-07-24 at 11.56.50 AM.jpeg"
+         alt="Imagen lateral" class="side-image" />
   </div>
 
   <script>
@@ -70,7 +63,6 @@
     const canvas = document.getElementById('matrix');
     const ctx = canvas.getContext('2d');
 
-    // Redimensionar al tamaño de la ventana
     function resizeCanvas() {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
@@ -78,38 +70,24 @@
     window.addEventListener('resize', resizeCanvas);
     resizeCanvas();
 
-    // Caracteres del efecto
-    const chars = 'アァカサタナハマヤャラワガザダバパイィキシチニヒミリヰギジヂビピウゥクスツヌフムユュルグズヅブプエェケセテネヘメレヱゲゼデベペオォコソトノホモヨョロゴゾドボポヴン';
+    // Caracteres y animación Matrix
+    const chars = 'アァカサタナナ...'; // (mismos caracteres)
     const fontSize = 16;
     let columns = Math.floor(canvas.width / fontSize);
     let drops = Array(columns).fill(1);
 
     function draw() {
-      // Fondo semitransparente para crear efecto de rastro
-      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillStyle = 'rgba(0,0,0,0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-      // Color y fuente
-      ctx.fillStyle = '#0F0';
-      ctx.font = fontSize + 'px monospace';
-
-      // Dibujar caracteres
+      ctx.fillStyle = '#0F0'; ctx.font = fontSize + 'px monospace';
       for (let i = 0; i < drops.length; i++) {
         const text = chars.charAt(Math.floor(Math.random() * chars.length));
-        const x = i * fontSize;
-        const y = drops[i] * fontSize;
+        const x = i * fontSize, y = drops[i] * fontSize;
         ctx.fillText(text, x, y);
-
-        // Reiniciar cuando sale de la pantalla
-        if (y > canvas.height && Math.random() > 0.975) {
-          drops[i] = 0;
-        }
-
+        if (y > canvas.height && Math.random() > 0.975) drops[i] = 0;
         drops[i]++;
       }
     }
-
-    // Animación continua
     setInterval(draw, 33);
   </script>
 </body>
