--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TYRONE_PRIME</title>
+  <H1> 🔥TYRONE-PRIME🔥</H1>
   <style>
     /* Estilos generales para ocupar todo el espacio */
     * { margin: 0; padding: 0; box-sizing: border-box; }
