--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       background: black;
     }
 
-    /* Título principal */
+    /* Título principal centrado en la parte superior */
     #pageTitle {
       position: absolute;
-      top: 50%;
+      top: 10%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translateX(-50%);
       color: #ffffff;
-      font-size: 2.5rem;
+      font-size: 3rem;
       font-family: monospace;
       z-index: 2;
       background: rgba(0, 0, 0, 0.7);
@@ -54,8 +54,8 @@
       border: 3px solid rgba(0, 255, 70, 0.8);
       border-radius: 8px;
       background: rgba(0,0,0,0.5);
-      width: 400px;
-      max-width: 60vw;
+      width: 300px;
+      max-width: 50vw;
       height: auto;
     }
 
@@ -78,7 +78,7 @@
 
   <!-- Contenedor con video e imagen lateral -->
   <div id="videoContainer">
-    <!-- Video con tamaño moderado, centrado -->
+    <!-- Video con tamaño más pequeño y centrado -->
     <video controls autoplay loop muted>
       <source src="./video/SnapTik-dot-Kim-cf2043946c00541a6b23c4bd28b13e0b.mp4" type="video/mp4">
       Tu navegador no soporta el elemento <code>video</code>.
@@ -90,7 +90,7 @@
   </div>
 
   <script>
-    // Configuración del canvas
+    // Configuración del canvas de Matrix
     const canvas = document.getElementById('matrix');
     const ctx = canvas.getContext('2d');
 
@@ -101,26 +101,26 @@
     window.addEventListener('resize', resizeCanvas);
     resizeCanvas();
 
-    // Caracteres y animación Matrix
+    // Lluvia de caracteres estilo Matrix
     const chars = 'アァカサタナハマヤャラワガザダバパイィキシチニヒミリヰギジヂビピウゥクスツヌフムユュルグズヅブプエェケセテネヘメレヱゲゼデベペオォコソトノホモヨョロゴゾドボポヴン';
     const fontSize = 16;
     let columns = Math.floor(canvas.width / fontSize);
     let drops = Array(columns).fill(1);
 
     function draw() {
-      ctx.fillStyle = 'rgba(0,0,0,0.05)';
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
       ctx.fillStyle = '#0F0';
-      ctx.font = fontSize + 'px monospace';
+      ctx.font = `${fontSize}px monospace`;
       for (let i = 0; i < drops.length; i++) {
         const text = chars.charAt(Math.floor(Math.random() * chars.length));
-        const x = i * fontSize, y = drops[i] * fontSize;
+        const x = i * fontSize;
+        const y = drops[i] * fontSize;
         ctx.fillText(text, x, y);
         if (y > canvas.height && Math.random() > 0.975) drops[i] = 0;
         drops[i]++;
       }
     }
-
     setInterval(draw, 33);
   </script>
 </body>
