Change title and content for Valentine's theme
Updated the title and content to reflect a Valentine's theme.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quieres ser mi beba?</title>
+    <title>💘 ¿Quieres ser mi San Valentín? 💘</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas id="matrix-canvas"></canvas>
 
     <div class="contenido">
-        <h1>¿Quieres ser mi beba? ❤️</h1>
+        <h1>💖 ¿Quieres ser mi San Valentín? 💖</h1>
+        <p class="mensaje">
+            Prometo hacerte sonreír, cuidarte y llenarte de momentos inolvidables ✨🌹
+        </p>
+
         <div class="botones">
-            <button id="btnSi" class="corazon" onclick="aceptarPuddina()">Sí 💖</button>
-            <button id="btnNo" class="corazon" onclick="negarPuddina()">No 💔</button>
+            <button id="btnSi" class="corazon" onclick="aceptarSanValentin()">
+                💝 Sí, quiero 💝
+            </button>
+
+            <button id="btnNo" class="corazon" onclick="negarSanValentin()">
+                💔 No...
+            </button>
         </div>
     </div>
 
