Update title to include 'Almendra'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💘 ¿Quieres ser mi San Valentín? 💘</title>
+    <title>💘 ¿Quieres ser mi San Valentín
+        Almendra? 💘</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,3 +30,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
